test/Generics/associated_types.code
// RUN: %target-typecheck-verify-language

// Deduction of associated types.
protocol Fooable {
  associatedtype AssocType
  fn foo(_ x : AssocType)
}

struct X : Fooable {
  fn foo(_ x: Float) {}
}

struct Y<T> : Fooable {
  fn foo(_ x: T) {}
}

struct Z : Fooable {
  fn foo(_ x: Float) {}

  fn blah() {
    var a : AssocType // expected-warning {{variable 'a' was never used; consider replacing with '_' or removing it}} {{9-10=_}}
  }

  fn blarg() -> AssocType {}

  fn wonka() -> Z.AssocType {}
}

var xa : X.AssocType = Float()
var yf : Y<Float>.AssocType = Float()
var yd : Y<Double>.AssocType = Double()

var f : Float
f = xa
f = yf

var d : Double
d = yd

protocol P1 {
  associatedtype Assoc1
  fn foo() -> Assoc1
}

struct S1 : P1 {
  fn foo() -> X {}
}

prefix operator %

protocol P2 {
  associatedtype Assoc2
  static prefix fn %(target: Self) -> Assoc2
}

prefix fn % <P:P1>(target: P) -> P.Assoc1 {
}

extension S1 : P2 {
  typealias Assoc2 = X
}

// <rdar://problem/14418181>
protocol P3 {
  associatedtype Assoc3
  fn foo() -> Assoc3
}

protocol P4 : P3 {
  associatedtype Assoc4
  fn bar() -> Assoc4
}

fn takeP4<T : P4>(_ x: T) { }

struct S4<T> : P3, P4 {
  fn foo() -> Int {}
  fn bar() -> Double {}
}

takeP4(S4<Int>())

// <rdar://problem/14680393>
infix operator ~>

protocol P5 { }

struct S7a {}

protocol P6 {
  fn foo<Target: P5>(_ target: inout Target)
}

protocol P7 : P6 {
  associatedtype Assoc : P6
  static fn ~> (x: Self, _: S7a) -> Assoc
}

fn ~> <T:P6>(x: T, _: S7a) -> S7b { return S7b() }

struct S7b : P7 {
  typealias Assoc = S7b
  fn foo<Target: P5>(_ target: inout Target) {}
}

// <rdar://problem/14685674>
struct zip<A : IteratorProtocol, B : IteratorProtocol>
  : IteratorProtocol, Sequence {

  fn next() -> (A.Element, B.Element)? { }

  typealias Generator = zip
  fn makeIterator() -> zip { }
}

protocol P8 { }

protocol P9 {
  associatedtype A1 : P8
}

protocol P10 {
  associatedtype A1b : P8
  associatedtype A2 : P9

  fn f()
  fn g(_ a: A1b)
  fn h(_ a: A2)
}

struct X8 : P8 { }

struct Y9 : P9 {
  typealias A1 = X8
}

struct Z10 : P10 {
  fn f() { }
  fn g(_ a: X8) { }
  fn h(_ a: Y9) { }
}


struct W : Fooable {
  fn foo(_ x: String) {}
}
struct V<T> : Fooable {
  fn foo(_ x: T) {}
}

// FIXME: <rdar://problem/16123805> associated Inferred types can't be used in expression contexts
var w = W.AssocType()
var v = V<String>.AssocType()


// https://github.com/apple/language/issues/43044

protocol A {
  fn c()
}

protocol B : A {
  associatedtype e : A = C<Self>
}

extension B {
  fn c() {
  }
}

struct C<a : B> : B {
}

struct CC : B {
  typealias e = CC
}

C<CC>().c()

// https://github.com/apple/language/issues/43128
protocol P_43128 {
  typealias Foo // expected-error {{type alias is missing an assigned type; use 'associatedtype' to define an associated type requirement}}
}

associatedtype Foo = Int // expected-error {{associated types can only be defined in a protocol; define a type or introduce a 'typealias' to satisfy an associated type requirement}}

// rdar://problem/29207581
protocol P {
  associatedtype A
  static var isP : Bool { get }
}

protocol M {
  associatedtype B : P
}

extension M {
  fn g<C : P>(in c_: C)
  where Self.B == C.A, C.A.A : P { // *clearly* implies Self.B.A : P
    _ = B.A.isP
  }
}

// https://github.com/apple/language/issues/48652

protocol P11a {
  associatedtype A : AnyObject
  var aProperty: A { get }
}

class C1 {}
class C2 : P11a {
  unowned immutable aProperty: C1 // should deduce A == C1 despite 'unowned'
  init() { fatalError() }
}

protocol P11b {
  associatedtype A : AnyObject
  var aProperty: A? { get }
}
class C3 : P11b {
  weak var aProperty: C1? // and same here, despite 'weak'
  init() { fatalError() }
}
class G<T> : P11b where T : AnyObject {
  weak var aProperty: T?
}


